<resources>
    <string name="app_name">LogInApp</string>
    <string name="app_text">LogIn</string>
    <string name="clearText">Clear</string>
    <string name="endButton">End</string>
    <string name="logInButton">Log In</string>
    <string name="logInText">Enter your username</string>
    <string name="passWordText">Enter your password</string>
    <string name="clearedText">All fields are cleared!</string>
    <string name="missText">You are mistaken in your username or password!</string>
    <string name="successText">You have successfully Log In!</string>
    <string name="loginWindow">LoginWindow</string>
    <string name="backButton">Back</string>
    <string name="startWindow">StartWindow</string>
    <string name="registText">Registration</string>
    <string name="registWindow">RegistrationWindow</string>
    <string name="yourName">Enter your name</string>
    <string name="passAgain">Enter your password again</string>
    <string name="yourSurname">Enter your surname</string>
    <string name="signButton">Sign up</string>
    <string name="clearFields">All fields are already clean!</string>
    <string name="successReg">You have successfully signed up!</string>
    <string name="welcome">Welcome</string>
    <string name="regError">Please complete all fields!</string>
</resources>