<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.student1.whileapp.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/regTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registText"
            android:textColor="@color/colorBlue"
            android:textSize="35dp"
            android:textStyle="bold|italic" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7.5dp"
                android:layout_weight="0.1"
                android:hint="@string/yourName"
                android:inputType="text" />

            <EditText
                android:id="@+id/surnameID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7.5dp"
                android:layout_weight="1"
                android:hint="@string/yourSurname"
                android:inputType="text" />

            <EditText
                android:id="@+id/userNameID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7.5dp"
                android:layout_weight="0.1"
                android:hint="@string/logInText"
                android:inputType="text" />

            <EditText
                android:id="@+id/pwID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7.5dp"
                android:layout_weight="0.1"
                android:hint="@string/passWordText"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/pwCopyID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="7.5dp"
                android:layout_weight="0.1"
                android:hint="@string/passAgain"
                android:inputType="textPassword" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="7.5dp">

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/signButton" />

        <Button
            android:id="@+id/ClButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/clearText" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/endButton" />

    </LinearLayout>

</LinearLayout>
